--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,47 +17,13 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="2dp"
+        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:src="@drawable/mask"
         app:layout_constraintBottom_toTopOf="@+id/login_title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginBottom="40dp"
-        android:gravity="center"
-        android:text="DESMASCARANDO"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:id="@+id/login_title"
-        app:layout_constraintBottom_toTopOf="@+id/register_name" />
-
-
-    <EditText
-        android:id="@+id/register_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="310dp"
-        android:layout_marginEnd="24dp"
-        android:background="@color/darkgrey"
-        android:hint="sua graça princesa"
-        android:inputType="textEmailAddress"
-        android:paddingVertical="7dp"
-        android:paddingStart="12dp"
-        android:selectAllOnFocus="true"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/register_username"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.804" />
 
     <EditText
         android:id="@+id/register_username"
@@ -73,46 +39,35 @@
         android:paddingStart="12dp"
         android:selectAllOnFocus="true"
         android:textColor="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/register_login_button"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/register_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="6dp"
-        android:background="@color/black"
-        android:enabled="false"
-        android:text="@string/action_sign_in"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@+id/register_register_button"
-        tools:layout_editor_absoluteX="40dp" />
-
-    <Button
-        android:id="@+id/register_register_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="310dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="64dp"
-        android:background="@color/lightgrey"
-        android:enabled="false"
-        android:text="@string/register_link"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/darkgrey"
+        android:hint="sua graça princesa"
+        android:inputType="textEmailAddress"
+        android:paddingVertical="7dp"
+        android:paddingStart="12dp"
+        android:selectAllOnFocus="true"
+        android:textColor="@color/white"
+        android:textColorHint="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/register_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/register_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -127,23 +82,68 @@
         android:paddingStart="12dp"
         android:selectAllOnFocus="true"
         android:textColor="@color/white"
+        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/register_username" />
 
+    <Button
+        android:id="@+id/register_login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/black"
+        android:enabled="true"
+        android:text="@string/action_sign_in"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@+id/register_register_button"
+        tools:layout_editor_absoluteX="51dp" />
+
+    <Button
+        android:id="@+id/register_register_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="124dp"
+        android:background="@color/lightgrey"
+        android:enabled="true"
+        android:text="@string/register_link"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_password"
+        app:layout_constraintVertical_bias="0.063" />
+
+    <TextView
+        android:id="@+id/login_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginBottom="40dp"
+        android:gravity="center"
+        android:text="DESMASCARANDO"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/register_name"
+        tools:layout_editor_absoluteX="40dp" />
+
+
     <ProgressBar
-        android:id="@+id/loading"
+        android:id="@+id/register_loading"
         android:layout_width="52dp"
         android:layout_height="51dp"
         android:layout_gravity="center"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_login_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
