--- a/app/src/main/res/layout/card_item_model.xml
+++ b/app/src/main/res/layout/card_item_model.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_item_model"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -28,34 +30,41 @@
 
         <TextView
             android:id="@+id/card_text_brand"
-            android:layout_width="wrap_content"
+            android:layout_width="89dp"
             android:layout_height="wrap_content"
             android:layout_weight="20"
             android:gravity="left"
             android:text="@string/card_model_brand"
             android:textColor="@color/textNormal" />
 
-       <!-- <Button
-            android:id="@+id/card_edit_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
+        <ImageView
+            android:id="@+id/card_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:background="@null"
-            android:gravity="right"
-            android:text="Editar"
-            android:textColor="@color/textWhite" />
-
-        <Button
-            android:id="@+id/card_delete_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="21dp"
             android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:text="Remover"
-            android:textColor="@color/textWhite" /> -->
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <!-- <Button
+             android:id="@+id/card_edit_button"
+             style="@style/Widget.AppCompat.Button.Borderless"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_weight="2"
+             android:background="@null"
+             android:gravity="right"
+             android:text="Editar"
+             android:textColor="@color/textWhite" />
+
+         <Button
+             android:id="@+id/card_delete_button"
+             style="@style/Widget.AppCompat.Button.Borderless"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:background="@null"
+             android:gravity="center"
+             android:text="Remover"
+             android:textColor="@color/textWhite" /> -->
     </LinearLayout>
 
 </RelativeLayout>
