--- a/app/src/main/res/layout/new_cellphone_dialog.xml
+++ b/app/src/main/res/layout/new_cellphone_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/dialog_bg"
@@ -26,38 +27,52 @@
         android:textColorHint="@color/textNormal"
         android:theme="@style/editTextStyle" />
 
-    <EditText
+<!--    <TextView-->
+<!--        android:id="@+id/edit_brand"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/edit_model"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:hint="@string/dialog_placeholder_brand"-->
+<!--        android:text="Horario"-->
+<!--        android:textColor="@color/textNormal"-->
+<!--        android:textColorHint="@color/textNormal"-->
+<!--        android:theme="@style/editTextStyle" />-->
+    <TextView
         android:id="@+id/edit_brand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_model"
-        android:layout_alignParentStart="true"
-        android:hint="@string/dialog_placeholder_brand"
+        android:layout_marginBottom="20dp"
+        android:text="Horario"
         android:textColor="@color/textNormal"
-        android:textColorHint="@color/textNormal"
-        android:theme="@style/editTextStyle" />
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linear"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/edit_brand"
+        android:layout_marginTop="4dp"
         android:gravity="right"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/cancel_button"
             style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_width="wrap_content"
+            android:layout_width="185dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:background="@null"
             android:text="Cancelar"
             android:textColor="@color/negative_option" />
 
+
         <Button
             android:id="@+id/confirm_button"
             style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_width="wrap_content"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:background="@null"
@@ -66,5 +81,15 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imagem_da_galeria"
+        android:layout_width="wrap_content"
+        android:layout_height="487dp"
+        android:layout_below="@id/linear"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        app:srcCompat="@drawable/mask" />
+
 
 </RelativeLayout>
