--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ModelsFragment"
+    tools:context=".PostsFragment"
     android:background="@color/black"
-    android:id="@+id/fragment_models">
+    android:id="@+id/fragment_posts">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/models_recyclerview" />
+        android:id="@+id/posts_recyclerview" />
 
 </LinearLayout>
