--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="368dp"
         android:layout_marginEnd="24dp"
         android:background="@color/darkgrey"
-        android:hint="seu email"
+        android:hint="@string/register_e_mail"
         android:inputType="textEmailAddress"
         android:paddingVertical="7dp"
         android:paddingStart="12dp"
@@ -52,7 +52,7 @@
         android:layout_marginTop="310dp"
         android:layout_marginEnd="24dp"
         android:background="@color/darkgrey"
-        android:hint="sua graça princesa"
+        android:hint="@string/nome_register"
         android:inputType="textEmailAddress"
         android:paddingVertical="7dp"
         android:paddingStart="12dp"
@@ -73,7 +73,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
         android:background="@color/darkgrey"
-        android:hint="sua senha"
+        android:hint="@string/senha_register"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
