--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="40dp"
         android:gravity="center"
-        android:text="DESMASCARANDO"
+        android:text="@string/desmascarando_title"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_marginTop="300dp"
         android:layout_marginEnd="24dp"
         android:background="@color/darkgrey"
-        android:hint="digita qualquer coisa ae parsa"
+        android:hint="@string/login_e_mail"
         android:inputType="textEmailAddress"
         android:paddingVertical="7dp"
         android:paddingStart="12dp"
@@ -66,7 +66,7 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="24dp"
         android:background="@color/darkgrey"
-        android:hint="qlq coisa vai so apertar o botao ae"
+        android:hint="@string/senha_login"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
