--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -56,7 +56,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="Fulano de tal"
+                android:text="@string/nome_card"
                 android:textColor="@color/textNormal"
                 android:textStyle="bold" />
 
@@ -67,7 +67,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="20"
                 android:gravity="left"
-                android:text="08:00"
+                android:text="@string/hora_card"
                 android:textColor="@color/textNormal" />
         </LinearLayout>
 
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/darkgrey"
-            android:text="Ver no mapa"
+            android:text="@string/ver_no_mapa"
             android:textColor="@color/white"
             android:textSize="10sp" />
 
