--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="2dp"
         android:gravity="center"
-        android:src="@drawable/mask"
+        android:src="@drawable/pessoas1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
