--- a/app/src/main/res/layout/fragment_posts.xml
+++ b/app/src/main/res/layout/fragment_posts.xml
@@ -10,6 +10,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/posts_recyclerview" />
+        android:id="@+id/posts_recyclerview"
+        android:layout_marginTop="0dp"
+        />
 
 </LinearLayout>
