--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.desmascarandoapp.MainActivity">
     <item
+        android:id="@+id/action_settings_alter_name"
+        android:orderInCategory="100"
+        android:title="@string/action_settings_alter_name"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings_logout"
         android:orderInCategory="100"
         android:title="@string/action_settings_logout"
