--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -127,7 +127,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="40dp"
         android:gravity="center"
-        android:text="DESMASCARANDO"
+        android:text="@string/desmascarando_upper"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
