--- a/app/src/main/res/layout/fragment_map_dialog.xml
+++ b/app/src/main/res/layout/fragment_map_dialog.xml
@@ -47,7 +47,7 @@
             android:layout_weight="2"
             android:textStyle="italic"
             android:textColor="@color/white"
-            android:text="Descrição" />
+            android:text="@string/pessoa_sem_m_scara_aqui" />
 
         <Button
             android:id="@+id/map_button_voltar"
